[package]
name = "memory_cheat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tasklist = "0.2.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows-sys = { version = "0.42.0", features = [
"Win32_System_Diagnostics_Debug",
"Win32_Foundation",
"Win32_System_Threading",
] }
winapi = { version = "0.3", features = ["winuser", "processthreadsapi"] }